Data/execa/testerrors_dep_file.log
13
file:///data/js-variants/multee/VariantsPureDep/execa/variant10/execa/node_modules/mem/dist/index.js:1
import mimicFn from 'mimic-fn';
       ^^^^^^^
SyntaxError: The requested module 'mimic-fn' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:189:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:533:24)
    at async loadESM (node:internal/process/esm_loader:91:5)
    at async handleMainPromise (node:internal/modules/run_main:65:12)
/data/js-variants/multee/VariantsPureDep/execa/variant3/execa/node_modules/signal-exit/index.js:110
  signals.forEach(function (sig) {
          ^

TypeError: signals.forEach is not a function
    at Object.<anonymous> (/data/js-variants/multee/VariantsPureDep/execa/variant3/execa/node_modules/signal-exit/index.js:110:11)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/data/js-variants/multee/VariantsPureDep/execa/variant3/execa/node_modules/open-editor/node_modules/execa/lib/kill.js:3:16)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
